# wolf-deps

./: CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
apr-2/include/apr-2/: apr.h
dav1d/: CMakeLists.txt
ffmpeg/5/: CMakeLists.txt
ffmpeg/6/: CMakeLists.txt  README.txt
ffmpeg/6/include/libavutil/: ffversion.h
ffmpeg/6/lib/android-arm64-v8a/pkgconfig/: libavdevice.pc  libavfilter.pc  libavutil.pc  libpostproc.pc  libswscale.pc
ffmpeg/6/lib/android-armeabi-v7a/pkgconfig/: libavdevice.pc  libavfilter.pc  libpostproc.pc  libswresample.pc  libswscale.pc
msquic/: CMakeLists.txt
msquic/samples/: main.cpp
openal/lib/windows/Debug/: OpenAL32.lib
openssl/: CMakeLists.txt
sdl/include/: SDL_uikitappdelegate.h
sdl/lib/windows/debug/: SDL2d.lib
srt/: CMakeLists.txt
stream/lib/windows/Debug/: game_view_library.lib  game_view_ui.lib  game_view_uiplugin.lib  stream_library.lib
stream/lib/windows/Release/: game_view_library.lib  game_view_ui.lib  game_view_uiplugin.lib  stream_library.lib
svt-av1/: CMakeLists.txt
tests/: CMakeLists.txt  ffmpeg5.cpp  msquic.cpp
vpx/: CMakeLists.txt
wolf/include/wolf/: tests.cpp  wolf.cpp  wolf.hpp
wolf/include/wolf/media/: CMakeLists.txt
wolf/include/wolf/media/ffmpeg/: CMakeLists.txt  CMakeLists.txt.bak  w_av_config.cpp  w_av_config.hpp  w_av_format.hpp  w_av_frame.cpp  w_av_frame.hpp  w_av_packet.cpp  w_av_packet.hpp  w_decoder.cpp  w_decoder.hpp  w_encoder.cpp  w_encoder.hpp  w_ffmpeg.cpp  w_ffmpeg.hpp  w_ffmpeg_ctx.cpp  w_ffmpeg_ctx.hpp
wolf/include/wolf/media/openal/: CMakeLists.txt  CMakeLists.txt.bak  w_openal.cpp.bak  w_openal.hpp  w_openal.hpp.bak
wolf/include/wolf/media/stb/: w_image.hpp  w_image_data.hpp
wolf/include/wolf/media/tests/: CMakeLists.txt  avframe.cpp  ffmpeg.cpp  gstreamer.cpp  image.cpp  openal.cpp
wolf/include/wolf/ml/: CMakeLists.txt  w_read_video_frames.hpp  w_utilities.hpp
wolf/include/wolf/ml/nudity_detection/: w_nudity_detection.hpp
wolf/include/wolf/ml/referee_ocr/: w_image_processor.hpp  w_ocr_engine.hpp  w_referee.hpp  w_soccer.hpp
wolf/include/wolf/stream/: module.cmake
wolf/include/wolf/stream/janus/: w_janus_api_emc.hpp
wolf/include/wolf/stream/quic/: CMakeLists.txt  w_quic.hpp  w_quic_client.hpp
wolf/include/wolf/stream/quic/datatypes/: w_credential_config.hpp
wolf/include/wolf/stream/quic/events/: w_connection_event.hpp  w_stream_event.hpp
wolf/include/wolf/stream/quic/handles/: w_connection.cpp  w_connection.hpp  w_registration.cpp  w_registration.hpp  w_stream.cpp  w_stream.hpp
wolf/include/wolf/stream/quic/internal/: common.hpp
wolf/include/wolf/stream/rist/: w_rist.hpp  w_rist_data_block.hpp
wolf/include/wolf/stream/rpc/: module.cmake  w_grpc_client.hpp  w_grpc_server.cpp  w_grpc_server.hpp
wolf/include/wolf/stream/tests/: CMakeLists.txt  ffmpeg_stream.cpp  grpc.cpp  quic.cpp  rist.cpp
wolf/include/wolf/system/: invocable.hpp  module.cmake  w_gametime.cpp  w_gametime.hpp  w_leak_detector.cpp  w_leak_detector.hpp  w_overloaded.cpp  w_overloaded.hpp  w_process.cpp  w_process.hpp  w_time.cpp  w_time.hpp  w_trace.cpp  w_trace.hpp
wolf/include/wolf/system/compression/: module.cmake  w_lz4.cpp  w_lz4.hpp  w_lzma.cpp  w_lzma.hpp
wolf/include/wolf/system/db/: module.cmake  w_postgresql.cpp  w_redis_client.cpp  w_redis_client.hpp
wolf/include/wolf/system/gamepad/: CMakeLists.txt  w_gamepad_client.hpp  w_gamepad_client_emc.cpp  w_gamepad_client_keymap.hpp  w_gamepad_client_sdl.cpp  w_gamepad_client_types.hpp  w_gamepad_virtual.cpp  w_gamepad_virtual.hpp  w_gamepad_virtual_bus.hpp  w_gamepad_virtual_pool.cpp  w_gamepad_virtual_pool.hpp
wolf/include/wolf/system/log/: module.cmake  w_log.cpp  w_log.hpp  w_log_config.hpp
wolf/include/wolf/system/socket/: CMakeLists.txt  w_socket_options.hpp  w_tcp_client.cpp  w_tcp_client.hpp  w_tcp_server.cpp  w_tcp_server.hpp  w_ws_client.cpp  w_ws_client.hpp  w_ws_client_emc.cpp  w_ws_client_emc.hpp  w_ws_server.cpp  w_ws_server.hpp
wolf/include/wolf/system/tests/: compress.cpp  coroutine.cpp  gamepad.cpp  gametime.cpp  log.cpp  lua.cpp  module.cmake  postgresql.cpp  process.cpp  python.cpp  redis.cpp  signal_slot.cpp  tcp.cpp  trace.cpp  ws.cpp
wolf/lib/windows/: wolf.lib
wolf2/include/w_net/uSockets/: version.txt
wolf2/lib/windows/: wolf_system_win.lib
x264/: CMakeLists.txt
